# whoop-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  mise.toml  pyproject.toml
.github/workflows/: docker-build-push.yaml
scripts/: setup
src/whoop_scraper/: __init__.py  api_client.py  auth.py  config.py  scraper.py
src/whoop_scraper/db/: __init__.py  operations.py  schema.py
tests/: __init__.py
