[project]
name = "whoop-scraper"
version = "0.1.0"
description = "Scrapes Whoop API health metrics and stores them in PostgreSQL"
readme = "README.md"
authors = [
    { name = "Mischa van den Burg", email = "mischavandenburg@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
whoop-scraper = "whoop_scraper:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
